<package>
  <name>gazebo_environments</name>
  <version>0.0.1</version>
  <description>
	This package contains gazebo environment such as models and worlds
  </description>
  <maintainer email="hyq@advr.iit.it">HyQ Group</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

</package>
